Make strings translatable, make icons consistent with the notifications page

--- a/apps/frontend/src/locales/en-US/index.json
+++ b/apps/frontend/src/locales/en-US/index.json
@@ -1658,6 +1658,12 @@
   "layout.nav.upgrade-to-modrinth-plus": {
     "message": "Upgrade to Modrinth+"
   },
+  "layout.notifications.mark-all-read": {
+    "message": "Mark all as read"
+  },
+  "layout.notifications.view-all": {
+    "message": "View all"
+  },
   "moderation.moderate": {
     "message": "Moderate"
   },
