Run fix + prepr

--- a/apps/frontend/src/locales/en-US/index.json
+++ b/apps/frontend/src/locales/en-US/index.json
@@ -1661,6 +1661,9 @@
   "layout.notifications.mark-all-read": {
     "message": "Mark all as read"
   },
+  "layout.notifications.no-unread": {
+    "message": "No unread notifications"
+  },
   "layout.notifications.view-all": {
     "message": "View all"
   },
