unknown -> plan-unknown

--- a/packages/ui/src/locales/en-US/index.json
+++ b/packages/ui/src/locales/en-US/index.json
@@ -428,6 +428,9 @@
   "label.plan-small": {
     "defaultMessage": "Small"
   },
+  "label.plan-unknown": {
+    "defaultMessage": "Unknown"
+  },
   "label.played": {
     "defaultMessage": "Played {time}"
   },
@@ -472,9 +475,6 @@
   },
   "label.title": {
     "defaultMessage": "Title"
-  },
-  "label.unknown": {
-    "defaultMessage": "Unknown"
   },
   "label.unlisted": {
     "defaultMessage": "Unlisted"
