--- a/apps/frontend/src/locales/en-US/index.json
+++ b/apps/frontend/src/locales/en-US/index.json
@@ -39,7 +39,7 @@
     "message": "Download options"
   },
   "app-marketing.download.terms": {
-    "message": "By downloading Modrinth App you agree to our <terms-link>Terms</terms-link> and <privacy-link>Privacy Policy</privacy-link>."
+    "message": "By downloading Modrinth App, you agree to our <terms-link>Terms</terms-link> and <privacy-link>Privacy Policy</privacy-link>."
   },
   "app-marketing.download.title": {
     "message": "Download Modrinth App (Beta)"
@@ -108,7 +108,7 @@
     "message": "% CPU"
   },
   "app-marketing.features.performance.description": {
-    "message": "Modrinth App performs better than many of the leading mod managers, using just 150mb of RAM!"
+    "message": "Modrinth App performs better than many of the leading mod managers, using just 150 MB of RAM!"
   },
   "app-marketing.features.performance.discord": {
     "message": "Discord"
@@ -423,7 +423,7 @@
     "message": "Enter collection name..."
   },
   "create.collection.summary-description": {
-    "message": "A sentence or two that describes your collection."
+    "message": "A sentence or two that describe your collection."
   },
   "create.collection.summary-label": {
     "message": "Summary"
@@ -480,7 +480,7 @@
     "message": "You will be the owner of this organization, but you can invite other members and transfer ownership at any time."
   },
   "create.organization.summary-description": {
-    "message": "A sentence or two that describes your organization."
+    "message": "A sentence or two that describe your organization."
   },
   "create.organization.summary-label": {
     "message": "Summary"
@@ -504,7 +504,7 @@
     "message": "Enter project name..."
   },
   "create.project.summary-description": {
-    "message": "A sentence or two that describes your project."
+    "message": "A sentence or two that describe your project."
   },
   "create.project.summary-label": {
     "message": "Summary"
@@ -633,7 +633,7 @@
     "message": "A business entity refers to a registered organization such as a corporation, partnership, or LLC."
   },
   "dashboard.creator-withdraw-modal.kyc.entity-question": {
-    "message": "Are you a withdrawing as an individual or business?"
+    "message": "Are you withdrawing as an individual or a business?"
   },
   "dashboard.creator-withdraw-modal.kyc.private-individual": {
     "message": "Private individual"
@@ -1107,7 +1107,7 @@
     "message": "Do Modrinth Hosting servers have DDoS protection?"
   },
   "hosting-marketing.faq.ddos-protection.answer": {
-    "message": "Yes. All Modrinth Hosting servers come with DDoS protection, with up to 17Tbps capacity in some locations."
+    "message": "Yes. All Modrinth Hosting servers come with DDoS protection, with up to 17 Tbps capacity in some locations."
   },
   "hosting-marketing.faq.heading": {
     "message": "Frequently Asked Questions"
@@ -1215,7 +1215,7 @@
     "message": "Know exactly what you need?"
   },
   "hosting-marketing.medal.info": {
-    "message": "Try a free <orange>3GB server</orange> for 5 days powered by <orange>Medal</orange>"
+    "message": "Try a free <orange>3 GB server</orange> for 5 days powered by <orange>Medal</orange>"
   },
   "hosting-marketing.medal.learn-more": {
     "message": "Learn more"
@@ -2631,7 +2631,7 @@
     "message": "Write reports"
   },
   "scopes.sessionAccess.description": {
-    "message": "Access modrinth-issued sessions"
+    "message": "Access Modrinth-issued sessions"
   },
   "scopes.sessionAccess.label": {
     "message": "Access sessions"
@@ -2784,7 +2784,7 @@
     "message": "Add more"
   },
   "settings.applications.button.add-redirect-uri": {
-    "message": "Add a redirect uri"
+    "message": "Add a redirect URI"
   },
   "settings.applications.button.cancel": {
     "message": "Cancel"
@@ -2847,7 +2847,7 @@
     "message": "https://example.com/auth/callback"
   },
   "settings.applications.field.redirect-uris": {
-    "message": "Redirect uris"
+    "message": "Redirect URIs"
   },
   "settings.applications.field.scopes": {
     "message": "Scopes"
@@ -3006,7 +3006,7 @@
     "message": "Create a PAT"
   },
   "settings.pats.description": {
-    "message": "PATs can be used to access Modrinth's API. For more information, see <doc-link>Modrinth's API documentation</doc-link>. They can be created and revoked at any time."
+    "message": "PATs can be used to access Modrinth's API. They can be created and revoked at any time. For more information, see <doc-link>Modrinth's API documentation</doc-link>."
   },
   "settings.pats.modal.create.action": {
     "message": "Create PAT"
