--- a/packages/ui/src/locales/en-US/index.json
+++ b/packages/ui/src/locales/en-US/index.json
@@ -650,6 +650,12 @@
   "payment-method.visa": {
     "defaultMessage": "Visa"
   },
+  "project-card.date.published.tooltip": {
+    "defaultMessage": "Published {date}"
+  },
+  "project-card.date.updated.tooltip": {
+    "defaultMessage": "Updated {date}"
+  },
   "project-card.environment.client": {
     "defaultMessage": "Client"
   },
@@ -822,7 +828,7 @@
     "defaultMessage": "Visit wiki"
   },
   "project.download-count-tooltip": {
-    "defaultMessage": "{count} {count, plural, one {download} other {downloads}}"
+    "defaultMessage": "{count, number} {count, plural, one {download} other {downloads}}"
   },
   "project.environment.client-and-server.description": {
     "defaultMessage": "Has some functionality on both the client and server, even if only partially."
@@ -891,7 +897,7 @@
     "defaultMessage": "Unknown environment"
   },
   "project.follower-count-tooltip": {
-    "defaultMessage": "{count} {count, plural, one {followers} other {followers}}"
+    "defaultMessage": "{count, number} {count, plural, one {follower} other {followers}}"
   },
   "project.settings.analytics.title": {
     "defaultMessage": "Analytics"
@@ -1618,9 +1624,6 @@
   },
   "tag.loader.waterfall": {
     "defaultMessage": "Waterfall"
-  },
-  "tooltip.date-at-time": {
-    "defaultMessage": "{date, date, long} at {time, time, short}"
   },
   "ui.component.unsaved-changes-popup.body": {
     "defaultMessage": "You have unsaved changes."
